[package]
name = "wb-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
regex = "1.10.6"
win-screenshot = "4.0.11"
winapi = { version = "0.3.9", features = ["winuser"] }
windows-sys = { version = "0.59.0", features = ["Win32", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
